<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/title"
            android:text="title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/default_padding"
            android:paddingRight="@dimen/default_padding"
            android:paddingTop="@dimen/default_padding"
            android:textColor="@color/film_title_color"
            android:textSize="@dimen/default_textSize" />

        <TextView
            android:id="@+id/release_date"
            android:text="release date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:paddingBottom="@dimen/default_padding"
            android:paddingLeft="@dimen/default_padding"
            android:paddingRight="@dimen/default_padding"
            android:textSize="@dimen/default_textSize" />

    </RelativeLayout>

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/default_padding"
        android:paddingLeft="@dimen/default_padding"
        android:paddingRight="@dimen/default_padding"
        android:text="" />

    <ImageView
        android:id="@+id/poster"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/default_padding"
        android:paddingRight="@dimen/default_padding"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:layout_gravity="center"
        android:contentDescription="@string/poster" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/director_title"
            android:text="@string/director"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/default_padding"
            android:paddingRight="@dimen/default_padding"
            android:paddingTop="@dimen/default_padding"
            android:textColor="@color/film_title_color"
            android:textSize="@dimen/default_textSize" />

        <TextView
            android:id="@+id/director_name"
            android:text="director name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/director_title"
            android:paddingBottom="@dimen/default_padding"
            android:paddingLeft="@dimen/default_padding"
            android:paddingRight="@dimen/default_padding"
            android:textSize="@dimen/default_textSize" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/producer_title"
            android:text="@string/producer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/default_padding"
            android:paddingRight="@dimen/default_padding"
            android:paddingTop="@dimen/default_padding"
            android:textColor="@color/film_title_color"
            android:textSize="@dimen/default_textSize" />

        <TextView
            android:id="@+id/producer_name"
            android:text="producer name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/producer_title"
            android:paddingBottom="@dimen/default_padding"
            android:paddingLeft="@dimen/default_padding"
            android:paddingRight="@dimen/default_padding"
            android:textSize="@dimen/default_textSize" />

    </RelativeLayout>

</LinearLayout>